<resources>
    <string name="app_name">MovieApp</string>
    <string name="_13_age">13+</string>
    <string name="avengers">Avengers: \nEnd Game</string>
    <string name="genres">Action, Adventure, Fantasy</string>
    <string name="num_of_reviews">125 REVIEWS</string>
    <string name="storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="storyline_word">Storyline</string>
    <string name="cast">Cast</string>
    <string name="back">Back</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="chris_evans">Chris Evans</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies list</string>
    <string name="_13">13+</string>
    <string name="action_adventure_drama">Action, Adventure, Drama</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="_137_min">137 MIN</string>
</resources>