<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FragmentMoviesDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/picture_background"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="375:298"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/orig" />

            <ImageView
                android:id="@+id/blur"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="375:298"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/right_gradient" />

            <ImageView
                android:id="@+id/pointer_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="59dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/path" />

            <TextView
                android:id="@+id/back_text"
                android:layout_width="28dp"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="56dp"
                android:text="@string/back"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@id/pointer_back"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/age"
                android:layout_width="24dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="226dp"
                android:layout_marginBottom="12dp"
                android:text="@string/_13_age"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/avengers"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="254dp"
                android:gravity="center_vertical"
                android:lineHeight="40sp"
                android:text="@string/avengers"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/genres"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/genres"
                android:textColor="@color/pink"
                app:layout_constraintTop_toBottomOf="@id/avengers" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="13.02dp"
                android:layout_height="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genres"
                app:srcCompat="@android:drawable/btn_star"
                app:tint="@color/pink" />
            <ImageView
                android:id="@+id/star2"
                android:layout_width="13.02dp"
                android:layout_height="12dp"
                android:layout_marginStart="3.25dp"
                android:layout_marginLeft="3.25dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/star"
                app:layout_constraintTop_toBottomOf="@+id/genres"
                app:srcCompat="@android:drawable/btn_star"
                app:tint="@color/pink" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="13.02dp"
                android:layout_height="12dp"
                android:layout_marginStart="3.25dp"
                android:layout_marginLeft="3.25dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/star2"
                app:layout_constraintTop_toBottomOf="@+id/genres"
                app:srcCompat="@android:drawable/btn_star"
                app:tint="@color/pink" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="13.02dp"
                android:layout_height="12dp"
                android:layout_marginStart="3.25dp"
                android:layout_marginLeft="3.25dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/star3"
                app:layout_constraintTop_toBottomOf="@+id/genres"
                app:srcCompat="@android:drawable/btn_star"
                app:tint="@color/pink" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="13.02dp"
                android:layout_height="12dp"
                android:layout_marginStart="3.25dp"
                android:layout_marginLeft="3.25dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/star4"
                app:layout_constraintTop_toBottomOf="@+id/genres"
                app:srcCompat="@android:drawable/btn_star"
                app:tint="@color/grey" />

            <TextView
                android:id="@+id/reviews_word"
                android:layout_width="112dp"
                android:layout_height="20dp"
                android:layout_marginStart="103dp"
                android:layout_marginLeft="103dp"
                android:layout_marginTop="4dp"
                android:text="@string/num_of_reviews"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genres" />

            <TextView
                android:id="@+id/storyline_word"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="416dp"
                android:text="@string/storyline_word"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/storyline"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="440dp"
                android:gravity="center_vertical"
                android:text="@string/storyline"
                android:textColor="@color/grey"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cast_word"
                android:layout_width="243dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="564dp"
                android:gravity="center_vertical"
                android:text="@string/cast"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/robert_jr"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="55dp"
                app:layout_constraintEnd_toStartOf="@+id/second_dude"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/storyline"
                app:srcCompat="@drawable/rob" />

            <TextView
                android:id="@+id/first_name"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:text="@string/robert_downey_jr"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/second_name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/robert_jr" />

            <ImageView
                android:id="@+id/second_dude"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_marginTop="55dp"
                android:layout_marginLeft="4dp"
                app:layout_constraintEnd_toStartOf="@+id/third_dude"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/robert_jr"
                app:layout_constraintTop_toBottomOf="@id/storyline"
                app:srcCompat="@drawable/third_actor"
                android:layout_marginStart="4dp" />


            <TextView
                android:id="@+id/second_name"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="4dp"
                android:text="@string/mark_ruffalo"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/third_name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"

                app:layout_constraintStart_toEndOf="@+id/first_name"
                app:layout_constraintTop_toBottomOf="@id/second_dude" />


            <ImageView
                android:id="@+id/third_dude"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_marginTop="55dp"
                android:layout_marginLeft="4dp"
                app:layout_constraintEnd_toStartOf="@+id/forth_dude"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/second_dude"
                app:layout_constraintTop_toBottomOf="@id/storyline"
                app:srcCompat="@drawable/nd_dude"
                android:layout_marginStart="4dp" />

            <TextView
                android:id="@+id/third_name"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="4dp"
                android:text="@string/chris_evans"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/forth_name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/second_name"
                app:layout_constraintTop_toBottomOf="@id/third_dude"
                android:layout_marginStart="4dp" />

            <ImageView
                android:id="@+id/forth_dude"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/third_dude"
                app:layout_constraintTop_toBottomOf="@id/storyline"
                app:srcCompat="@drawable/kris"
                android:layout_marginStart="4dp" />

            <TextView
                android:id="@+id/forth_name"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/chris_hemsworth"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/third_name"
                app:layout_constraintTop_toBottomOf="@id/forth_dude"
                android:layout_marginStart="4dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>