<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_details_card_view_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/black"
    tools:context=".FragmentMoviesDetails"
    android:fillViewport="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/picture_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/avengers_in_shadow" />

            <ImageView
                android:id="@+id/blur"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="@+id/picture_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/picture_background"
                app:srcCompat="@drawable/right_gradient" />

            <ImageView
                android:id="@+id/pointer_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="59dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back_arrow" />

            <TextView
                android:id="@+id/back_text"
                android:layout_width="28dp"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="56dp"
                android:text="@string/back"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@id/pointer_back"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/age"
                android:layout_width="24dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="226dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/age_13" />

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="254dp"
                android:gravity="center_vertical"
                android:lineHeight="40sp"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/avengers" />

            <TextView
                android:id="@+id/genres"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/pink"
                app:layout_constraintTop_toBottomOf="@id/movie_name"
                tools:text="@string/avengers_genres" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="13.02dp"
                android:layout_height="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genres"
                app:srcCompat="@android:drawable/btn_star"
                tools:tint="@color/pink" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="13.02dp"
                android:layout_height="12dp"
                android:layout_marginStart="3.25dp"
                android:layout_marginLeft="3.25dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/star"
                app:layout_constraintTop_toBottomOf="@+id/genres"
                app:srcCompat="@android:drawable/btn_star"
                tools:tint="@color/pink" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="13.02dp"
                android:layout_height="12dp"
                android:layout_marginStart="3.25dp"
                android:layout_marginLeft="3.25dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/star2"
                app:layout_constraintTop_toBottomOf="@+id/genres"
                app:srcCompat="@android:drawable/btn_star"
                tools:tint="@color/pink" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="13.02dp"
                android:layout_height="12dp"
                android:layout_marginStart="3.25dp"
                android:layout_marginLeft="3.25dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/star3"
                app:layout_constraintTop_toBottomOf="@+id/genres"
                app:srcCompat="@android:drawable/btn_star"
                tools:tint="@color/pink" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="13.02dp"
                android:layout_height="12dp"
                android:layout_marginStart="3.25dp"
                android:layout_marginLeft="3.25dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/star4"
                app:layout_constraintTop_toBottomOf="@+id/genres"
                app:srcCompat="@android:drawable/btn_star"
                tools:tint="@color/grey" />

            <TextView
                android:id="@+id/reviews_word"
                android:layout_width="112dp"
                android:layout_height="20dp"
                android:layout_marginStart="103dp"
                android:layout_marginLeft="103dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genres"
                tools:text="@string/num_of_reviews" />

            <TextView
                android:id="@+id/storyline_word"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="416dp"
                android:text="@string/storyline_word"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/storyline"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="440dp"
                android:gravity="center_vertical"
                android:textColor="@color/grey"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/storyline" />

            <TextView
                android:id="@+id/cast_word"
                android:layout_width="243dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="564dp"
                android:gravity="center_vertical"
                android:text="@string/cast"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actors_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="7dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cast_word" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.cardview.widget.CardView>