<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="12dp">

    <ImageView
        android:id="@+id/transparent_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/heroes"
        android:layout_width="170dp"
        android:layout_height="248dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="@id/transparent_screen"
        app:layout_constraintLeft_toLeftOf="@id/transparent_screen"
        app:layout_constraintRight_toRightOf="@id/transparent_screen"
        app:layout_constraintTop_toTopOf="@id/transparent_screen"
        tools:src="@drawable/avengers_poster" />

    <ImageView
        android:id="@+id/gradient"
        android:layout_width="170dp"
        android:layout_height="248dp"
        android:src="@drawable/right_gradient"
        app:layout_constraintLeft_toLeftOf="@id/transparent_screen"
        app:layout_constraintRight_toRightOf="@id/transparent_screen"
        app:layout_constraintTop_toTopOf="@id/transparent_screen" />

    <ImageView
        android:id="@+id/rounded_square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/rounded_square"
        app:layout_constraintLeft_toLeftOf="@id/transparent_screen"
        app:layout_constraintTop_toTopOf="@id/transparent_screen"
        app:tint="#D9020101" />

    <ImageView
        android:id="@+id/age"
        android:layout_width="16dp"
        android:layout_height="12dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="6dp"
        app:layout_constraintLeft_toLeftOf="@id/rounded_square"
        app:layout_constraintTop_toTopOf="@id/rounded_square"
        tools:src="@drawable/age_13" />

    <ImageView
        android:id="@+id/heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginRight="6dp"
        app:layout_constraintRight_toRightOf="@id/transparent_screen"
        app:layout_constraintTop_toTopOf="@id/transparent_screen"
        tools:src="@drawable/gray_like" />

    <TextView
        android:id="@+id/genres"
        android:layout_width="146dp"
        android:layout_height="12dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="214dp"
        android:textColor="@color/pink"
        android:textSize="8sp"
        app:layout_constraintLeft_toLeftOf="@id/transparent_screen"
        app:layout_constraintTop_toTopOf="@id/transparent_screen"
        tools:text="@string/action_adventure_drama" />

    <ImageView
        android:id="@+id/star"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="58dp"
        app:layout_constraintBottom_toBottomOf="@+id/transparent_screen"
        app:layout_constraintStart_toStartOf="@id/heroes"
        app:srcCompat="@android:drawable/btn_star"
        tools:tint="@color/pink" />

    <ImageView
        android:id="@+id/star2"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="58dp"
        app:layout_constraintBottom_toBottomOf="@+id/transparent_screen"
        app:layout_constraintStart_toEndOf="@id/star"
        app:srcCompat="@android:drawable/btn_star"
        tools:tint="@color/pink" />

    <ImageView
        android:id="@+id/star3"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="58dp"
        app:layout_constraintBottom_toBottomOf="@+id/transparent_screen"
        app:layout_constraintStart_toEndOf="@id/star2"
        app:srcCompat="@android:drawable/btn_star"
        tools:tint="@color/pink" />

    <ImageView
        android:id="@+id/star4"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="58dp"
        app:layout_constraintBottom_toBottomOf="@+id/transparent_screen"
        app:layout_constraintStart_toEndOf="@id/star3"
        app:srcCompat="@android:drawable/btn_star"
        tools:tint="@color/pink" />

    <ImageView
        android:id="@+id/star5"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="58dp"
        app:layout_constraintBottom_toBottomOf="@+id/transparent_screen"
        app:layout_constraintStart_toEndOf="@id/star4"
        app:srcCompat="@android:drawable/btn_star"
        tools:tint="@color/grey" />

    <TextView
        android:id="@+id/reviews_word"
        android:layout_width="53dp"
        android:layout_height="12dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="56dp"
        android:textColor="@color/grey"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/transparent_screen"
        app:layout_constraintStart_toEndOf="@id/star5"
        tools:text="@string/num_of_reviews" />

    <TextView
        android:id="@+id/movie_name"
        android:layout_width="154dp"
        android:layout_height="20dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="256dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/transparent_screen"
        app:layout_constraintLeft_toLeftOf="@id/transparent_screen"
        app:layout_constraintTop_toTopOf="@id/transparent_screen"
        tools:text="@string/avengers_end_game" />

    <TextView
        android:id="@+id/mins"
        android:layout_width="154dp"
        android:layout_height="12dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="276dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/grey"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/transparent_screen"
        app:layout_constraintLeft_toLeftOf="@id/transparent_screen"
        app:layout_constraintTop_toTopOf="@id/transparent_screen"
        tools:text="@tools:sample/date/hhmm" />


</androidx.constraintlayout.widget.ConstraintLayout>